Fix: Corrige conexão com o banco de dados PostgreSQL no Render